--- a/.vuerc
+++ b/.vuerc
@@ -1,4 +1,46 @@
 {
   "useTaobaoRegistry": false,
-  "packageManager": "yarn"
+  "packageManager": "yarn",
+  "latestVersion": "4.2.2",
+  "lastChecked": 1582298415767,
+  "presets": {
+    "@ams/quick": {
+      "useConfigFiles": true,
+      "plugins": {
+        "@vue/cli-plugin-babel": {},
+        "@vue/cli-plugin-typescript": {
+          "classComponent": false,
+          "useTsWithBabel": true
+        },
+        "@vue/cli-plugin-eslint": {
+          "config": "prettier",
+          "lintOn": [
+            "commit"
+          ]
+        }
+      }
+    },
+    "aaronschweig/full": {
+      "useConfigFiles": true,
+      "plugins": {
+        "@vue/cli-plugin-babel": {},
+        "@vue/cli-plugin-typescript": {
+          "classComponent": false,
+          "useTsWithBabel": true
+        },
+        "@vue/cli-plugin-router": {
+          "historyMode": true
+        },
+        "@vue/cli-plugin-vuex": {},
+        "@vue/cli-plugin-eslint": {
+          "config": "prettier",
+          "lintOn": [
+            "save"
+          ]
+        },
+        "@vue/cli-plugin-unit-jest": {}
+      },
+      "cssPreprocessor": "node-sass"
+    }
+  }
 }
